--- a/dada/extras/documentation/pod_source/features-wysiwyg_editors.pod
+++ b/dada/extras/documentation/pod_source/features-wysiwyg_editors.pod
@@ -14,13 +14,9 @@ Dada Mail supports the following WYSIWYG HTML editors:
 
 =item * CKEditor
 
-=item * FCKeditor
-
 =item * Tiny MCE
 
 =back
-
-FCKeditor is only supported for backwards compatibility with previous versions of Dada Mail, and is not what we recommend that you us. B<We will be removing support for FCKeditor in a future version of Dada Mail.> CKeditor is the natural heir to FCKeditor, so it shouldn't be a big deal.  
 
 =head2 Supported File Browsers
 
@@ -31,8 +27,6 @@ Two file browsers/uploaders are available for Dada Mail. Configurating which one
 =head3 KCFinder
 
 Dada Mail supports B<KCFinder> in all three WYSIWYG editors that it also supports. Dada Mail does I<not> ship with support for the B<CKFinder> file browser, which is developed by the same company that develops CKEditor, because it requires an additional commercial license. KCFinder is free software.
-
-Dada Mail also does not ship with FCKeditor's default file browser "connectors", as it they are difficult to set up correctly, buggy, unsupported, and they have a reputation for being very insecure. KCFinder uses sessioning to only allow file browsing and uploading, if you are logging into Dada Mail's list control panel. 
 
 =head3 Core5 FileManager
 
@@ -77,10 +71,6 @@ Under that directory, it  will place the editors, browser/uploader, and upload d
 
 for CKEditor
 
-=item * fckeditor
-
-for FCKeditor
-
 =item * file_uploads
 
 for saving the files you upload, using KCFinder/FileManager
@@ -107,10 +97,6 @@ To install any of the editors/file browser, see their individual documentation. 
 Configuration of the editors to work with Dada Mail is done in the configuration variable, C<$WYSIWYG_EDITOR_OPTIONS>, which looks like this: 
 
 	$WYSIWYG_EDITOR_OPTIONS = { 
-		fckeditor => { 
-			enabled => 0, 
-			url     => '', 
-		}, 
 		ckeditor    => { 
 			enabled => 0, 
 			url     => '', 
@@ -121,7 +107,7 @@ Configuration of the editors to work with Dada Mail is done in the configuration
 		},
 	};
 
-For each editor's parameters (C<fckeditor>, C<ckeditor>, C<tiny_mce>), there are two more named parameters, C<enabled> and, C<url>. 
+For each editor's parameters (C<ckeditor>, C<tiny_mce>), there are two more named parameters, C<enabled> and, C<url>. 
 
 C<enabled> can be set to C<1> to enable the editor, or C<0> to disable. Disabled editors will not be available to be used in your mailing lists, even if they're installed on your hosting account. If any of your mailing lists have selected a editor that you then disable, they will default in using B<no> editor. 
 
@@ -199,7 +185,7 @@ C<connector> is available as a parameter, but at the moment, the only valid valu
 
 =head2 Additional Configuration Files
 
-CKEditor, Tiny MCE and FCKEditor also expect an additional configuration file called, C<dada_mail_config.js> to be saved in the base URL of the editor. These configuration file should hold any additional configuration you would like for Dada Mail specifically. Again, setting up these editors to work with KCFinder is not covered in the configuration examples below - for now, we suggest using the Dada Mail Installer for that type of integration, or using your own custom configuration. 
+CKEditor and TinyMCE also expect an additional configuration file called, C<dada_mail_config.js> to be saved in the base URL of the editor. These configuration file should hold any additional configuration you would like for Dada Mail specifically. Again, setting up these editors to work with KCFinder is not covered in the configuration examples below - for now, we suggest using the Dada Mail Installer for that type of integration, or using your own custom configuration. 
 
 Copies of the default configuration files are stored in Dada Mail as HTML::Template templates and the configuration files themselves are created during install. These default templates reside at: 
 
@@ -213,9 +199,6 @@ I<dada/installer-disabled/templates/tinymce_config_js.tmpl>
 
 I<dada/installer-disabled/templates/ckeditor_config_js.tmpl>
 
-=item * FCKeditor
-
-I<dada/installer-disabled/templates/fckconfig_js.tmpl>
 
 =back
 
@@ -237,10 +220,6 @@ Below are bare-bone examples of what these configuration files should hold.
 =head3 CKEditor
 
 There is nothing specific that the CKEditor needs in its C<dada_mail_config.js>. You can start by copying the C<config.js> file to a file called, C<dada_mail_config.js> (saved in that same directory) and make any additional changes that you would like in this new file. 
-
-=head3 FCKeditor
-
-Similar to CKEditor, there is nothing specific that the FCKeditor needs in its C<dada_mail_config.js>. You can start by copying the C<fckconfig.js> file to a file called, C<dada_mail_config.js> (saved in that same directory) and make any additional changes that you would like in this new file. 
 
 =head2 KCFinder
 
@@ -266,7 +245,7 @@ Image data is embedded in the HTML source of the message you write. Dada Mail wi
 
 Long Story Short, WYSIWYG editors break any Dada Mail template tags you set in the, "href" of any HTML tag - including sadly, Clickthrough Tracker tags -  and may also munge up any template tags. Please! Send a test message out, before comitting to a large mass mailing! We suggest using the, B<Clickthrough Track All Message Links>, option in the Tracker Plugin. 
 
-B<See:> L<http://dadamailproject.com/d/tracker.cgi.html#clickthrough_tags_and_wysiwyg_editors__ckeditor_tiny_mce_fckeditor_>
+B<See:> L<http://dadamailproject.com/d/tracker.cgi.html#clickthrough_tags_and_wysiwyg_editors__ckeditor_tiny_mce>
 
 for more information. 
 
