--- a/dada/extras/documentation/pod_source/changes_6_x.pod
+++ b/dada/extras/documentation/pod_source/changes_6_x.pod
@@ -1,6 +1,6 @@
 =pod
 
-=head1 6.8.0 Beta 2
+=head1 6.8.0
 
 =head2 Features
 
@@ -10,19 +10,21 @@ Dada Mail now supports the Core5 FileManager, along with KCFinder. More informat
 
 L<http://labs.corefive.com/projects/filemanager/>
 
-WYSIWYG Editors and File Browsers in Dada Mail: 
+Learn more about WYSIWYG Editors and File Browser support in Dada Mail: 
 
 L<http://dadamailproject.com/d/features-wysiwyg_editors.pod.html>
 
-We've added FileManager support to Dada Mail, as people were having trouble with KCFinder's php code. FileManager's connector (that we ship) is written in Perl, so if you can run Dada Mail, using FileManager should work equally well. 
+We've added FileManager support to Dada Mail, because some people are having trouble with KCFinder's php backend code. 
+
+FileManager's backend connector (that we ship) is written in Perl, so if you can run Dada Mail, using FileManager should work equally well. 
 
 =head3 CKEditor Upgraded to v4.3
 
+CKEditor has been upgraded from v3.x to v4.3
+
 =head3 TinyMCE Upgraded to v4.0.11
 
-=head3 Clickthrough Tracking: URLs in image maps tracked
-
-URLs for links in image maps weren't tracked by Dada Mail. These URLs should now be properly tracked. 
+TinyMCE has been upgraded from v3.x to v4.0.11
 
 =head3 Bridge: Moderators and Authorized Senders
 
@@ -38,9 +40,17 @@ Discussion Messages may now be sent, "On Behalf Of" the original sender by the L
 
 =head2 Change 6.8.0
 
+=head3 Amazon SES Auto-Adjust Batch Sending Rates
+
+Dada Mail has an option (which we think you should use) to automatically adjust batch sending rates, when sending with Amazon SES. We've modified the algorithm that figures out this rate to be more aggressive with sending speed, without going over your spec'd Amazon SES sending limits. Welcome to faster sending w/Amazon SES! 
+
 =head3 FCKeditor Support Dropped
 
-With the upgrade of CKeditor, we've now dropped support fully for FCKeditor. FCKeditor has been listed as, "Deprecated" for over a year and during that time, it has been not been advised to be installed at all. 
+With the upgrade of CKeditor to v4.x, we've now fully dropped support for FCKeditor. FCKeditor has been listed as, "deprecated" for over a year and during that time, it has been not been advised to be installed at all. 
+
+=head3 Clickthrough Tracking: URLs in image maps tracked
+
+URLs for links in image maps weren't tracked by Dada Mail. These URLs should now be properly tracked. 
 
 =head2 Bugfixes 6.8.0
 
